--- a/CheckProfiles/templates/index.html
+++ b/CheckProfiles/templates/index.html
@@ -1,30 +1,36 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Login</title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-	</head>
-	<body>
-		<div class="login">
-			<h1>Login</h1>
-			<div class="links">
-				<a href="{{ url_for('login') }}" class="active">Login</a>
-				<a href="#">Register</a>
-			</div>
-			<form action="{{ url_for('login') }}" method="post">
-				<label for="username">
-					<i class="fas fa-user"></i>
-				</label>
-				<input type="text" name="username" placeholder="Username" id="username" required>
-				<label for="password">
-					<i class="fas fa-lock"></i>
-				</label>
-				<input type="password" name="password" placeholder="Password" id="password" required>
-				<div class="msg">{{ msg }}</div>
-				<input type="submit" value="Login">
-			</form>
-		</div>
-	</body>
+<html lang="en">
+    <head>
+        <title>Index</title>
+        <link rel="stylesheet" href="../static/style.css">
+    </head>
+
+    <style>
+        body{
+            background-image: url(https://rare-gallery.com/mocahbig/451879-purple-sky-wires-sky-city-power-lines-pink.jpg);
+            background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        }
+    </style>
+    <body>
+        <div class="one">
+            <div class="two">
+                <h1>Side Bar</h1>
+                <ul>
+                    <li class="active"><a href="{{url_for('index')}}">Index</a></li>
+                    <li><a href="{{url_for('display')}}">Display</a></li>
+                    <li><a href="{{url_for('update')}}">Update</a></li>
+                    <li><a href="{{url_for('logout')}}">Log out</a></li>
+                </ul>
+            </div>
+            <div class="content" align="center">
+                <div class="topbar">
+                    <h2>Welcome!! You are in Index Page!! </h2>
+                </div></br>
+                <div class="contentbar">
+                    <div class="msg" style="padding-bottom: 20px; color: white;">{{ msg }}</div>
+                  </div>
+            </div>
+        </div>
+    </body>
 </html>
